force-app/main/default/objects/adobesign__Document__c/fields/adobesign__Document_Template__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup field for document template that&apos;s used to create this document.</description>
    <inlineHelpText>The lookup field for document template that&apos;s used to create this document.</inlineHelpText>
    <label>Document Template</label>
    <referenceTo>adobesign__Document_Template__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>