force-app/main/default/objects/adobesign__Document__c/fields/adobesign__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>adobesign__DocumentId__c</fullName>
    <description>ID of either Salesforce ContentVersion or Attachment record</description>
    <inlineHelpText>ID of either Salesforce ContentVersion or Attachment record</inlineHelpText>
    <label>DocumentId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>