force-app/main/default/objects/adobesign__Document__c/fields/adobesign__Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Name__c</fullName>
    <description>Document Name</description>
    <inlineHelpText>Document Name</inlineHelpText>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>