force-app/main/default/objects/adobesign__Document__c/fields/adobesign__Object_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Field_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Field Mapping</label>
    <referenceTo>adobesign__Object_Field_Mapping__c</referenceTo>
    <relationshipLabel>Document Builder Documents</relationshipLabel>
    <relationshipName>Contract_Builder_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>