force-app/main/default/objects/adobesign__Document__c/fields/adobesign__Source_Id__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Source_Id__c</fullName>
    <description>Salesforce object record id</description>
    <inlineHelpText>Salesforce object record id that&apos;s used to extract data.</inlineHelpText>
    <label>Source Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>