force-app/main/default/objects/adobesign__Document__c/fields/adobesign__Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Storage_Type__c</fullName>
    <description>It&apos;s set via Storage_Type value in document template automatically.</description>
    <inlineHelpText>It&apos;s set via Storage_Type value in document template automatically.</inlineHelpText>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>adobesign__Storage_Type</valueSetName>
    </valueSet>
</CustomField>